--- a/XGile2/Views/Shared/_Layout.cshtml
+++ b/XGile2/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("NewProjects", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("NewProjects2", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("NewProjects3", "Contact", "Home")</li>
                 </ul>
             </div>
         </div>
