--- a/XGile2/Views/Shared/_Layout.cshtml
+++ b/XGile2/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("NewProjects", "Contact", "Home")</li>
                     <li>@Html.ActionLink("NewProjects2", "Contact", "Home")</li>
                     <li>@Html.ActionLink("NewProjects3", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("NewProjects333", "Contact", "Home")</li>
                 </ul>
             </div>
         </div>
