--- a/XGile2/Views/Shared/_Layout.cshtml
+++ b/XGile2/Views/Shared/_Layout.cshtml
@@ -27,6 +27,8 @@
                     <li>@Html.ActionLink("NewProjects2", "Contact", "Home")</li>
                     <li>@Html.ActionLink("NewProjects3", "Contact", "Home")</li>
                     <li>@Html.ActionLink("NewProjects333", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("NewProjects3333", "Contact", "Home")</li>
+                       
                 </ul>
             </div>
         </div>
