--- a/XGile2/Views/Shared/_Layout.cshtml
+++ b/XGile2/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                     <li>@Html.ActionLink("NewProjects3", "Contact", "Home")</li>
                     <li>@Html.ActionLink("NewProjects333", "Contact", "Home")</li>
                     <li>@Html.ActionLink("NewProjects3333", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Hasvij", "Contact", "Home")</li>
                        
                 </ul>
             </div>
